<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <TextView
        android:id="@+id/scoreTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="100dp"

        android:text="Your Score:"
        android:textSize="28sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/playerScoreTV"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginBottom="16dp"

            android:text="@string/endGame_PlayerScore"
            android:textSize="36sp"/>

        <TextView
            android:id="@+id/slashTV"
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:text="@string/endGame_Slash"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/totalScoreTV"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginBottom="16dp"

            android:text="@string/endGame_TotalScore"
            android:textSize="36sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="150dp"
        android:gravity="bottom"
        android:textColor="#000"
        android:visibility="invisible"
        android:text="@string/endGame_ShareBtn"/>

    <Button
        android:id="@+id/startNewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="bottom"
        android:textColor="#000"
        android:text="@string/endGame_StartNewBtn"/>

</LinearLayout>