<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"

        android:textSize="20sp"/>

    <TextView
        android:id="@+id/questionTV"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:textSize="28sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/optionOneBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="#000"
                android:text=""
                android:textAlignment="center"
                android:textSize="26sp" />

            <Button
                android:id="@+id/optionTwoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textColor="#000"
                android:text=""
                />

            <Button
                android:id="@+id/optionThreeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textColor="#000"
                android:text=""
                />

            <Button
                android:id="@+id/optionFourBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textColor="#000"
                android:text=""/>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="bottom"
                android:textColor="#000"
                android:text="@string/inGame_SubmitBtn"/>

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-55dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="bottom"
                android:textColor="#000"
                android:text="@string/inGame_NextBtn"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/finishBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="bottom"
                android:text="@string/inGame_FinishBtn"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="30sp"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
